--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,5 @@ server.servlet.context-path=/workintech
 management.info.env.enabled=true
 management.endpoints.web.exposure.include=info,health,mappings
 info.app.name = s17d2 depency injection
-info.app.description= workintecth workspace
+info.app.description= workintech workspace
 info.app.version=v1
